--- a/task7.html
+++ b/task7.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Задача 7</h1>
-    <p>З клавіатури вводиться номер дня тижня. Вивести на екран назву дня.</p>
+    <p>З клавіатури вводиться номер місяця. Вивести до якої пори він відноситься
+
+.</p>
     <script>
       const numberMonth = parseInt(prompt(`Введіть номер місяця`));
       let season;
